--- a/sourse/pug/blocks/sServices/_sServices.pug
+++ b/sourse/pug/blocks/sServices/_sServices.pug
@@ -7,7 +7,30 @@ mixin sServices(data)
 			+b.section-title
 				h1 Удлинение газели
 				p Есть много вариантов Lorem Ipsum Большинство из них имеет не всегда Модификации, например, юмористические
-		+e.content
-			p Компания «АвтоРекорд» является сертифицированным поставщиком надстроек на грузовые автомобили марки «ГАЗ» в Нижнем Новгороде и одним из основных направлений нашей деятельности является именно удлинение рам.
-			p Получение дополнительной прибыли нашими клиентами за счет увеличения площади рам грузовых авто является главным аспектом популярности данной услуги. Удлинение производится как для транспортных единиц с европлатформами, так и с бортовыми платформами.
+		if data.short
+			+e.content
+				p Компания «АвтоРекорд» является сертифицированным поставщиком надстроек на грузовые автомобили марки «ГАЗ» в Нижнем Новгороде и одним из основных направлений нашей деятельности является именно удлинение рам.
+				p Получение дополнительной прибыли нашими клиентами за счет увеличения площади рам грузовых авто является главным аспектом популярности данной услуги. Удлинение производится как для транспортных единиц с европлатформами, так и с бортовыми платформами.
+		if data.long
+			// remove d- classes its for pp
+			+e.content.d-none.d-sm-block
+				p Компания «АвтоРекорд» является сертифицированным поставщиком надстроек на грузовые автомобили марки «ГАЗ» в Нижнем Новгороде и одним из основных направлений нашей деятельности является именно удлинение рам.
+				p Получение дополнительной прибыли нашими клиентами за счет увеличения площади рам грузовых авто является главным аспектом популярности данной услуги. Удлинение производится как для транспортных единиц с европлатформами, так и с бортовыми платформами.
+			// remove d- classes its for pp
+			+e.content--h2.d-none.d-sm-block
+				h2 Заголовок Н2
+				p Производство еврофургонов, эвакуаторов и самосвалов на базе машин отечественных и зарубежных марок, удлинение грузовых автомобилей, а также установка пневмоподвески, ГБО и п рочими видами усовершенствования коммерческого транспорта.
+			+e.content--h3
+				h3 Заголовок Н3
+				p Компания «АвтоРекорд» является сертифицированным поставщиком надстроек на грузовые автомобили марки «ГАЗ» в Нижнем Новгороде и одним из основных направлений нашей деятельности является именно удлинение рам.
+				p
+					| Получение дополнительной прибыли нашими клиентами за счет увеличения площади рам грузовых авто является главным аспектом популярности данной услуги.
+					|
+					span.d-none.d-sm-inline Удлинение производится как для транспортных единиц с европлатформами, так и с бортовыми платформами. Мы учтем ряд ваших пожеланий при переоборудовании и воплотим их в жизнь без негативного влияния на надежность и маневренность авто.
+				p.d-none.d-sm-block Мы принимаем заказы на реализацию нестандартных решений. Так вы можете заказать различные варианты удлинения с использованием стальных, оцинкованных, алюминиевых бортов, различными разборными и сдвижными конструктивными элементами, съемными стойками, а также фронтальными шторами.
+			+e.content--h4
+				h4 Заголовок Н4
+				p Компания «АвтоРекорд» является сертифицированным поставщиком надстроек на грузовые автомобили марки «ГАЗ» в Нижнем Новгороде и одним из основных направлений нашей деятельности является именно удлинение рам.
+				p Получение дополнительной прибыли нашими клиентами за счет увеличения площади рам грузовых авто является главным аспектом популярности данной услуги. Удлинение производится как для транспортных единиц с европлатформами, так и с бортовыми платформами. Мы учтем ряд ваших пожеланий при переоборудовании и воплотим их в жизнь без негативного влияния на надежность и маневренность авто.
+				p.d-none.d-sm-block Мы принимаем заказы на реализацию нестандартных решений. Так вы можете заказать различные варианты удлинения с использованием стальных, оцинкованных, алюминиевых бортов, различными разборными и сдвижными конструктивными элементами, съемными стойками, а также фронтальными шторами.
 	// end sServices
