--- a/sourse/pug/pages/07-services.pug
+++ b/sourse/pug/pages/07-services.pug
@@ -29,7 +29,9 @@ block pagecontent
 		seoBox: true,
 		hasActual: true,
 	})
-		+sServices()
+		+sServices({
+			short: true,
+		})
 	+footer()
 	+b.fixed-box--js
 		+blueFixed()
