--- a/sourse/pug/pages/layout/main.pug
+++ b/sourse/pug/pages/layout/main.pug
@@ -52,5 +52,7 @@ html(lang="ru")
 		.main-wrapper
 			block pagecontent
 				h3 content
+		+b.scroll-top--js
+			img(loading="lazy" src="img/svg/chevron-top.svg")
 		+modal()
 		+allcjs()
