--- a/sourse/sass/_vars.scss
+++ b/sourse/sass/_vars.scss
@@ -111,6 +111,7 @@ $theme-colors: (
   "warning": $orange,
   "danger": $danger,
   "light": $light,
+  "white": $white,
   "gray": $gray-300,
   "dark": $dark) !default;
 // scss-docs-end theme-colors-map
