--- a/sourse/pug/blocks/footer/_footer.pug
+++ b/sourse/pug/blocks/footer/_footer.pug
@@ -5,7 +5,7 @@ mixin footer()
 				.col-md-4.col-lg-2.col-xl-3.d-none.d-sm-block
 					+e.logo
 						img(loading="lazy" src="img/svg/logo.svg" alt="")
-					+footerSoc()
+					+footerSoc('justify-content-center justify-content-md-start')
 				+e.col--mnu.col-lg-4.col-xl-4.d-none.d-lg-block
 					+e.service-title(href="#") Услуги:
 					+e.UL.service-mnu
@@ -63,7 +63,7 @@ mixin footer()
 					+b.big-link.link-modal-js(href="#modal-call") Обратный звонок
 
 mixin footerSoc(addClasses="justify-content-center justify-content-md-start")
-	+b.f-soc-row.row
+	+b.f-soc-row.row(class=addClasses)
 		+sSocItem('vk', '#4A76A8')
 		+sSocItem('inst', '#E94754')
 		+sSocItem('fb', '#1877F2')
