--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -1,6 +1,6 @@
 .pixel-perfect {
   top: 0;
-  //top: 20px;
+  //top: -315px;
 
   display: block;
   @include a-cent(x);
@@ -751,4 +751,105 @@ body{
   }
 
 
+}
+//
+.swiper-button-hand-prev,
+.swiper-button-hand-next{
+  @include mt();
+  @extend .btn;
+  @extend .btn-white;
+
+  width: rem(45);
+  height: rem(45);
+  padding: 4px;
+  border-radius: 50%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  img{
+    @include mt();
+    width: auto;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
+  }
+
+  &:hover{
+    border-color: $primary;
+    img{
+      transform: scale(1.2);
+    }
+  }
+}
+
+.scroll-top{
+  @include mt();
+  transform-origin: bottom right;
+
+  width: rem(32);
+  height: rem(32);
+  right: rem(12);
+  bottom: calc(#{rem(12)} + var(--bot-fixed-h, 0px));
+  @include media-breakpoint-up(md){
+    width: rem(40);
+    height: rem(40);
+    right: rem(20);
+    bottom: calc(#{rem(20)} + var(--bot-fixed-h, 0px));
+  }
+  @include media-breakpoint-up(xxl){
+    width: rem(60);
+    height: rem(60);
+    right: rem(50);
+    bottom: calc(#{rem(50)} + var(--bot-fixed-h, 0px));
+  }
+
+  position: fixed;
+  z-index: 910;
+
+  &:not(.active){
+    transform: scale(0);
+    right: 0;
+    bottom: 0;
+  }
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  img{
+    @include mt();
+    width: auto;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
+  }
+
+  @extend .btn;
+  @extend .btn-white;
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.1);
+  &:hover{
+    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.24);
+    img{
+      transform: scale(1.3);
+    }
+  }
+  border-radius: 50%;
+}
+
+.click-area-boost{
+  cursor: pointer;
+  position: relative;
+  z-index: 1;
+  &:before{
+    content: '';
+    position: absolute;
+    z-index: -1;
+
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+    width: calc(100% + 10px);
+    height: calc(100% + 10px);
+  }
 }
