--- a/sourse/pug/blocks/top-nav/_top-nav.pug
+++ b/sourse/pug/blocks/top-nav/_top-nav.pug
@@ -75,5 +75,5 @@ mixin tellDD()
 
 mixin tellDDItem(tell, tellHref, gray)
 	+e.item
-		+e.tell(href=tellHref)=tell
+		+e.tell(href=`tel:${tellHref}`)=tell
 		+e.gray=gray
