--- a/sourse/pug/blocks/header/_header.scss
+++ b/sourse/pug/blocks/header/_header.scss
@@ -1,8 +1,15 @@
 // start .header
 .header {
   //padding-top: var(--header-h);
-  position: relative;
+  position: fixed;
   z-index: 900;
+  top: 0;
+  left: 0;
+  width: 100%;
+
+  &.fixed{
+    box-shadow: 0 0 10px 0px rgba($black, .25);
+  }
 
   &__{}
   &__{}
