--- a/sourse/pug/blocks/footer/_footer.pug
+++ b/sourse/pug/blocks/footer/_footer.pug
@@ -40,12 +40,9 @@ mixin footer()
 							|
 							span.set-curr-year-js 2021
 					+e.mob-row.row.d-md-none
-						.col-6
-							+b.big-link.link-modal-js(href="#modal-call")
-								| Проложить
-								br
-								| маршрут
-						.col-6
+						.col-12
+							+b.big-link.link-modal-js(href="#modal-call") Проложить маршрут
+						//-.col-6
 							+b.big-link.link-modal-js(href="#modal-call")
 								| Обратный
 								br
