--- a/sourse/pug/blocks/top-nav/_top-nav.pug
+++ b/sourse/pug/blocks/top-nav/_top-nav.pug
@@ -31,8 +31,8 @@ mixin mob-mnu()
 						| © ООО «Авторекорд»
 						|
 						span.set-curr-year-js 2020
-						br
-						| ИНН 5256171974, ОГРН 1185275017124
+						//-br
+						//-| ИНН 5256171974, ОГРН 1185275017124
 				//-+footerSoc('')
 				+soc()
 
