--- a/sourse/pug/blocks/sAddInfo/_sAddInfo.scss
+++ b/sourse/pug/blocks/sAddInfo/_sAddInfo.scss
@@ -131,3 +131,42 @@
 	&__{}
 	&__{}
 } // end.sAddInfo
+
+//
+.add-card{
+	display: flex;
+	flex-direction: column;
+	min-height: 100%;
+
+	&__img{
+		@extend .accept-ratio-frame;
+		padding-top: calc(9/16 * 100%);
+		margin-bottom: rem(20);
+		border-radius: rem(4);
+	}
+	&__title{
+		display: block;
+
+		font-weight: 600;
+		color: $body-color;
+		&:hover{
+			color: $primary;
+		}
+
+	}
+	&__content{
+		font-size: rem(14);
+		& > *:last-child{
+			margin-bottom: 0;
+		}
+
+		padding-bottom: rem(24);
+	}
+	&__btn{
+		margin-top: auto;
+		width: 100%;
+		@extend .arrow-btn;
+		justify-content: center;
+	}
+	&__{}
+}
