--- a/sourse/pug/blocks/mixin-wrap/components/soc.pug
+++ b/sourse/pug/blocks/mixin-wrap/components/soc.pug
@@ -1,5 +1,5 @@
 mixin item-sos(icon)
-	+e.item(href='#' target="_blank" class=icon)
+	+e.item(href='#' target="_blank" rel="nofollow" class=icon)
 		if block
 			block
 		else
