--- a/sourse/pug/blocks/sContact/_sContact.pug
+++ b/sourse/pug/blocks/sContact/_sContact.pug
@@ -23,7 +23,7 @@ mixin sContact()
 				p Будни  8:00 - 17:00
 		+e.sub-title Расположение на карте
 		+e.map
-			<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Abaf97ca96139f9956b88ed7aac2976d42a1a2aeb468a7bbd75691bc10129a4f7&amp;width=1275&amp;height=332&amp;lang=ru_RU&amp;scroll=false"></script>
+			<script  charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Abaf97ca96139f9956b88ed7aac2976d42a1a2aeb468a7bbd75691bc10129a4f7&amp;width=1275&amp;height=332&amp;lang=ru_RU&amp;scroll=false"></script>
 	// end sContact
 
 mixin sContactItem(imgNum, title)
