--- a/sourse/pug/pages/08-services-big.pug
+++ b/sourse/pug/pages/08-services-big.pug
@@ -48,7 +48,8 @@ block pagecontent
 	+sVideo()
 	+sPrice()
 	+sHowMuch()
-	+sActual()
+	//- +sActual()
+	+sAddInfo("АКТУАЛЬНО ПО ТЕМЕ").bg-none
 	+footer()
 	+b.fixed-box--js
 		//-+blueFixed()
