--- a/sourse/pug/blocks/sHowMuch/_sHowMuch.pug
+++ b/sourse/pug/blocks/sHowMuch/_sHowMuch.pug
@@ -11,10 +11,8 @@ mixin sHowMuch(data)
 							|
 							br
 							| с еврофургоном/платформой, регистрацией в ГИБДД и т.д.
-					+e.btn(href="#") Отправить заявку
-					+e.img-mob.d-md-none
-						img(loading="lazy" src='img/@2x/sHowMuch-car-mob.png' alt="")
-				.col-md-6.col-xl-7.d-none.d-md-block
+					+e.btn(href="#") Отправить заявку 
+				.col-md-6.col-xl-7
 					+e.img
 						img(loading="lazy" src='img/@2x/sHowMuch-car.png' alt="")
 
