--- a/sourse/pug/blocks/headerBlock/_headerBlock.scss
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.scss
@@ -288,4 +288,12 @@
 			line-height: 1.5;
 		}
 	}
+
+	@include media-breakpoint-down(md) {
+		&:not(:first-child){
+			p{
+				display: none;
+			}
+		}
+	}
 }
