--- a/sourse/pug/blocks/sHowMuch/_sHowMuch.scss
+++ b/sourse/pug/blocks/sHowMuch/_sHowMuch.scss
@@ -75,24 +75,26 @@
 			max-width: 100%;
 			height: auto;
 		}
-	}
-	&__img-mob{
-		position: absolute;
-		z-index: -1;
-		top: -55px;
-		left: 0;
-		width: 100%;
-		height: 100%;
-
-		display: flex;
-		justify-content: center;
-		img{
-			width: auto;
-			height: auto;
-			max-width: 100%;
-			max-height: 100%;
+		@include media-breakpoint-down(md)  {
+			
+			position: absolute;
+			z-index: -1;
+			top: -55px;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			
+			display: flex;
+			justify-content: center;
+			opacity: 0.15;
+			img{
+				width: auto;
+				height: auto;
+				max-width: 100%;
+				max-height: 100%;
+			} 
 		}
-	}
+		}
 	&__{}
 	&__{}
 } // end.sHowMuch
