--- a/sourse/pug/blocks/sServices/_sServices.scss
+++ b/sourse/pug/blocks/sServices/_sServices.scss
@@ -8,6 +8,11 @@
 		--sPB: #{rem(30)};
 		--sTPB: #{rem(40)};
 	}
+	.section{
+		// padding-top: 0;
+		// padding-bottom: 0;
+
+	}
 	&.long{
 		--sPB: 0;
 		--sTPB: 20px;
@@ -36,44 +41,7 @@
 	&__baner{
 		margin-bottom: 20px;
 		position: relative;
-	}
-	&__b-img{
-		@extend .accept-ratio-frame-nh;
-		border-radius: 5px;
-
-		margin-bottom: 20px;
-		padding-top: calc(220/335 * 100%);
-		@include media-breakpoint-up(sm){
-			margin-bottom: 0;
-			padding-top: 0;
-			height: rem(420);
-		}
-
-		&:after{
-			@include media-breakpoint-up(sm){
-				content: '';
-			}
-			position: absolute;
-			top: 0;
-			left: 0;
-			width: 100%;
-			height: 100%;
-			z-index: 2;
-			background: linear-gradient(360deg, rgba(22, 23, 24, 0.9) 18.5%, rgba(50, 58, 66, 0.5) 60.52%, rgba(50, 58, 66, 0) 100%);
-		}
-
-		img {
-			position: absolute;
-			z-index: 1;
-			width: 100%;
-			height: 100%;
-			top: 0;
-			left: 0;
-			object-fit: cover;
-		}
-	}
-
-	.section-title{
+		.section-title{
 		@include media-breakpoint-up(sm){
 			z-index: 3;
 			padding: rem(30);
@@ -106,6 +74,44 @@
 			}
 		}
 	}
+	}
+	&__b-img{
+		@extend .accept-ratio-frame-nh;
+		border-radius: 5px;
+
+		margin-bottom: 20px;
+		padding-top: calc(220/335 * 100%);
+		@include media-breakpoint-up(sm){
+			margin-bottom: 0;
+			padding-top: 0;
+			height: rem(420);
+		}
+
+		&:after{
+			@include media-breakpoint-up(sm){
+				content: '';
+			}
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			z-index: 2;
+			background: linear-gradient(60deg, rgba(22, 23, 24, 0.9) 18.5%, rgba(50, 58, 66, 0.5) 60.52%, rgba(50, 58, 66, 0) 100%);
+		}
+
+		img {
+			position: absolute;
+			z-index: 1;
+			width: 100%;
+			height: 100%;
+			top: 0;
+			left: 0;
+			object-fit: cover;
+		}
+	}
+
+	
 	&__content{
 		font-size: 13px;
 		line-height: calc(17/13);
