--- a/sourse/pug/blocks/mixin-wrap/components/soc.pug
+++ b/sourse/pug/blocks/mixin-wrap/components/soc.pug
@@ -13,8 +13,8 @@ mixin soc(addClasses='')
 		else
 			+item-sos('soc-vk')
 			+item-sos('soc-inst')
-			+item-sos('soc-fb')
-			+item-sos('soc-tw')
+			+item-sos('soc-rutube')
+			+item-sos('soc-ya-zen')
 			+item-sos('soc-yt')
 
 //- /social buttons 
