--- a/sourse/pug/blocks/top-nav/_top-nav.pug
+++ b/sourse/pug/blocks/top-nav/_top-nav.pug
@@ -43,7 +43,7 @@ mixin top-nav()
 				.col-auto.d-lg-none
 					+e.burger(class="toggle-menu-mobile--js")
 						img(loading="lazy" src="img/svg/burger-bars.svg" alt="")
-				.col-auto
+				.col-auto.d-none.d-sm-block
 					+e.logo
 						img(loading="lazy" src='img/svg/logo.svg' alt="")
 				.col.d-none.d-lg-block
@@ -56,7 +56,7 @@ mixin top-nav()
 						+e.dd-btn.tell-dd-btn-js
 							+e.icon
 								img(loading="lazy" src="img/svg/tell.svg" alt="")
-							+e.number.d-none.d-lg-block(href='tel:+88002229792') 8 800 222 97 92
+							+e.number.d-block(href='tel:+88002229792') 8 800 222 97 92
 						+tellDD()
 					+e.callback.d-none.d-lg-inline-block(href="#") Обратный звонок
 	// end top-nav
