--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -27,6 +27,10 @@
 	font-size:math.div(12,10)*1rem;
 	width: math.div(13,12)*1em;
 }
+.icon-soc-rutube {
+	font-size:math.div(500,10)*1rem;
+	width: math.div(500,500)*1em;
+}
 .icon-soc-tw {
 	font-size:math.div(12,10)*1rem;
 	width: math.div(12,12)*1em;
@@ -34,6 +38,10 @@
 .icon-soc-vk {
 	font-size:math.div(13,10)*1rem;
 	width: math.div(13,13)*1em;
+}
+.icon-soc-ya-zen {
+	font-size:math.div(50,10)*1rem;
+	width: math.div(50,50)*1em;
 }
 .icon-soc-yt {
 	font-size:math.div(444.44,10)*1rem;
