--- a/sourse/pug/blocks/headerBlock/_headerBlock.pug
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.pug
@@ -16,11 +16,11 @@ mixin headerBlock()
 				p
 					| Производство еврофургонов, эвакуаторов и самосвалов на базе машин отечественных и зарубежных марок, удлинение грузовых автомобилей, а также установка пневмоподвески, ГБО и п рочими видами усовершенствования коммерческого транспорта.
 			+e.c-row
-				+headerBlockCard(1, 'big', `Удлинение <br/> грузовых автомобилей`, `Удлинение, производство еврофургонов, эвакуаторов и самосвалов <span class="d-none d-sm-inline">на базе машин отечественных и зарубежных марок. </span>`)
+				+headerBlockCard(1)
 				+headerBlockCard(2)
 				+headerBlockCard(3)
 				+headerBlockCard(4)
-				+headerBlockCard(5)
+				//- +headerBlockCard(5)
 			.text-center
 				+e.btn(href="#") Перейти в каталог услуг
 	// end headerBlock
