--- a/sourse/pug/blocks/headerBlock/_headerBlock.scss
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.scss
@@ -132,22 +132,25 @@
 		@include media-breakpoint-up(lg){
 			grid-template-columns: repeat(4, 1fr);
 		}
+		@include media-breakpoint-down(sm){
+			grid-template-columns: 1fr;
+		}
 		grid-column-gap: 20px;
 		grid-row-gap: 20px;
 
 		//
-		& > *:first-child{
-			grid-column-start: 1;
-			grid-column-end: 3;
-			grid-row-start: 1;
-			grid-row-end: 3;
-			@include media-breakpoint-up(lg){
-				grid-column-start: 1;
-				grid-column-end: 3;
-				grid-row-start: 1;
-				grid-row-end: 3;
-			}
-		}
+		// & > *:first-child{
+		// 	grid-column-start: 1;
+		// 	grid-column-end: 3;
+		// 	grid-row-start: 1;
+		// 	grid-row-end: 3;
+		// 	@include media-breakpoint-up(lg){
+		// 		grid-column-start: 1;
+		// 		grid-column-end: 3;
+		// 		grid-row-start: 1;
+		// 		grid-row-end: 3;
+		// 	}
+		// }
 
 
 		margin-bottom: 20px;
@@ -184,20 +187,20 @@
 	padding-top: var(--ar-frame, calc(460/580 * 100%));
 	min-height: 100%;
 
-	&.big{
-		--par-d: block;
+	// &.big{
+	// 	--par-d: block;
 
-		--ar-frame: calc(220/335 * 100%);
-		--heading-fs: 13px;
-		--heading-mb: 10px;
-		--par-fs: 14px;
-		@include media-breakpoint-up(sm){
-			--ar-frame: calc(460/580 * 100%);
-			--heading-fs: #{rem(20)};
-			--heading-mb: #{rem(20)};
-			--par-fs: #{rem(16)};
-		}
-	}
+	// 	--ar-frame: calc(220/335 * 100%);
+	// 	--heading-fs: 13px;
+	// 	--heading-mb: 10px;
+	// 	--par-fs: 14px;
+	// 	@include media-breakpoint-up(sm){
+	// 		--ar-frame: calc(460/580 * 100%);
+	// 		--heading-fs: #{rem(20)};
+	// 		--heading-mb: #{rem(20)};
+	// 		--par-fs: #{rem(16)};
+	// 	}
+	// }
 
 	&.catalog{
 		--par-d: block;
@@ -278,9 +281,9 @@
 			font-size: var(--heading-fs, 16px);
 		}
 		p{
-			display: var(--par-d, none);
+			display: block;
+			// display: var(--par-d, none);
 			@include media-breakpoint-up(sm){
-				display: block;
 				//font-weight: 600;
 			}
 
@@ -289,11 +292,11 @@
 		}
 	}
 
-	@include media-breakpoint-down(md) {
-		&:not(:first-child){
-			p{
-				display: none;
-			}
-		}
-	}
+	// @include media-breakpoint-down(md) {
+	// 	&:not(:first-child){
+	// 		p{
+	// 			display: none;
+	// 		}
+	// 	}
+	// }
 }
