--- a/sourse/pug/blocks/top-nav/_top-nav.scss
+++ b/sourse/pug/blocks/top-nav/_top-nav.scss
@@ -61,7 +61,10 @@
 	&__tell-dd{
 		position: relative;
 		z-index: 10;
-
+		@include media-breakpoint-down(sm){
+			margin-left: -10px;
+		}
+	
 		//&:hover{
 		//	--tell-dd-scale: 1;
 		//}
@@ -76,10 +79,10 @@
 		align-items: center;
 
 		&:after{
-			@include media-breakpoint-up(lg){
-				content: '';
-			}
-			@include mt();
+			// @include media-breakpoint-up(lg){
+				// }
+				@include mt();
+			content: '';
 			flex-shrink: 0;
 			display: inline-block;
 			margin-left: var(--chevron-me);
@@ -91,6 +94,9 @@
 			background-repeat: no-repeat;
 			background-position: center;
 			background-size: cover;
+			@include media-breakpoint-down(sm){
+				margin-left: 15px;
+			}
 		}
 	}
 	&__icon{
@@ -104,6 +110,10 @@
 			border-radius: 5px;
 			border: 1px solid $gray-720;
 		}
+		// @include media-breakpoint-down(sm){
+		// 	width: 25px;
+		// 	height: 25px;
+		// }
 		@include media-breakpoint-up(lg){
 			width: rem(22);
 			height: rem(22);
@@ -126,6 +136,9 @@
 		font-size: rem(24);
 		line-height: calc(29/24);
 		color: $white;
+		// @include media-breakpoint-down(sm){
+		// 	font-size: 12px;
+		// }
 	}
 	&__callback{
 		display: inline-block;
