--- a/sourse/sass/_vars.scss
+++ b/sourse/sass/_vars.scss
@@ -230,7 +230,7 @@ $utilities-bg-colors: map-loop($utilities-colors, rgba-css-var, "$key", "bg") !d
 //
 // Style anchor elements.
 
-$link-color: $primary !default;
+$link-color: $blue;
 $link-decoration: none !default;
 $link-shade-percentage: 20% !default;
 $link-hover-color: shift-color($link-color, $link-shade-percentage) !default;
